Kube Manifests/shuffle-helm-chart.yaml
---
# Source: shuffle/charts/opensearch/templates/coordinating/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: shuffle-opensearch-coordinating
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/version: 3.2.0
    helm.sh/chart: opensearch-2.0.10
    app.kubernetes.io/part-of: opensearch
    app.kubernetes.io/component: coordinating-only
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: shuffle
      app.kubernetes.io/name: opensearch
      app.kubernetes.io/component: coordinating-only
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 9200
        - port: 9300
---
# Source: shuffle/charts/opensearch/templates/dashboards/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: shuffle-opensearch-dashboards
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/version: 3.2.0
    helm.sh/chart: opensearch-2.0.10
    app.kubernetes.io/part-of: opensearch
    app.kubernetes.io/component: dashboards
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: shuffle
      app.kubernetes.io/name: opensearch
      app.kubernetes.io/component: dashboards
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 5601
---
# Source: shuffle/charts/opensearch/templates/data/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: shuffle-opensearch-data
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/version: 3.2.0
    helm.sh/chart: opensearch-2.0.10
    app.kubernetes.io/part-of: opensearch
    app.kubernetes.io/component: data
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: shuffle
      app.kubernetes.io/name: opensearch
      app.kubernetes.io/component: data
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 9200
        - port: 9300
---
# Source: shuffle/charts/opensearch/templates/ingest/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: shuffle-opensearch-ingest
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/version: 3.2.0
    helm.sh/chart: opensearch-2.0.10
    app.kubernetes.io/part-of: opensearch
    app.kubernetes.io/component: ingest
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: shuffle
      app.kubernetes.io/name: opensearch
      app.kubernetes.io/component: ingest
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 9200
        - port: 9300
---
# Source: shuffle/charts/opensearch/templates/master/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: shuffle-opensearch-master
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/version: 3.2.0
    helm.sh/chart: opensearch-2.0.10
    app.kubernetes.io/part-of: opensearch
    app.kubernetes.io/component: master
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: shuffle
      app.kubernetes.io/name: opensearch
      app.kubernetes.io/component: master
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 9200
        - port: 9300
---
# Source: shuffle/templates/backend/backend-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: shuffle-backend
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: shuffle
    app.kubernetes.io/version: 2.1.3
    helm.sh/chart: shuffle-2.1.3
    app.kubernetes.io/component: backend
    io.kompose.service: backend
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: shuffle
      app.kubernetes.io/name: shuffle
      app.kubernetes.io/component: backend
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 5001
          protocol: TCP
---
# Source: shuffle/templates/frontend/frontend-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: shuffle-frontend
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: shuffle
    app.kubernetes.io/version: 2.1.3
    helm.sh/chart: shuffle-2.1.3
    app.kubernetes.io/component: frontend
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: shuffle
      app.kubernetes.io/name: shuffle
      app.kubernetes.io/component: frontend
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    
    - ports:
        - port: 80
        - port: 443
---
# Source: shuffle/templates/orborus/orborus-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: shuffle-orborus
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: shuffle
    app.kubernetes.io/version: 2.1.3
    helm.sh/chart: shuffle-2.1.3
    app.kubernetes.io/component: orborus
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: shuffle
      app.kubernetes.io/name: shuffle
      app.kubernetes.io/component: orborus
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
---
# Source: shuffle/templates/shuffle-app/shuffle-app-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: shuffle-app
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: shuffle
    app.kubernetes.io/version: 2.1.3
    helm.sh/chart: shuffle-2.1.3
    app.kubernetes.io/component: app
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: shuffle-app
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 80
          protocol: TCP
---
# Source: shuffle/templates/shuffle-worker/shuffle-worker-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: shuffle-worker
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: shuffle
    app.kubernetes.io/version: 2.1.3
    helm.sh/chart: shuffle-2.1.3
    app.kubernetes.io/component: worker
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: shuffle-worker
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 33333
          protocol: TCP
---
# Source: shuffle/charts/opensearch/templates/data/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: shuffle-opensearch-data-hl
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/version: 3.2.0
    helm.sh/chart: opensearch-2.0.10
    app.kubernetes.io/component: data
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: tcp-rest-api
      port: 9200
      targetPort: rest-api
    - name: tcp-transport
      port: 9300
      targetPort: transport
  selector:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/component: data
  trafficDistribution: PreferClose
---
# Source: shuffle/charts/opensearch/templates/master/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: shuffle-opensearch-master-hl
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/version: 3.2.0
    helm.sh/chart: opensearch-2.0.10
    app.kubernetes.io/component: master
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: tcp-rest-api
      port: 9200
      targetPort: rest-api
    - name: tcp-transport
      port: 9300
      targetPort: transport
  selector:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/component: master
  trafficDistribution: PreferClose
---
# Source: shuffle/charts/opensearch/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shuffle-opensearch
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/version: 3.2.0
    helm.sh/chart: opensearch-2.0.10
    app.kubernetes.io/component: master
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-rest-api
      port: 9200
      targetPort: rest-api
      nodePort: null
    - name: tcp-transport
      port: 9300
      nodePort: null
  selector:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/component: master
---
# Source: shuffle/templates/backend/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: shuffle-backend
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: shuffle
    app.kubernetes.io/version: 2.1.3
    helm.sh/chart: shuffle-2.1.3
    app.kubernetes.io/component: backend
    io.kompose.service: backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5001
      targetPort: http
      protocol: TCP
      appProtocol: http
  selector:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/name: shuffle
    app.kubernetes.io/component: backend
---
# Source: shuffle/templates/frontend/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: shuffle-frontend
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: shuffle
    app.kubernetes.io/version: 2.1.3
    helm.sh/chart: shuffle-2.1.3
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
      appProtocol: http
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
      appProtocol: https
  selector:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/name: shuffle
    app.kubernetes.io/component: frontend
---
# Source: shuffle/templates/backend/backend-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shuffle-backend
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: shuffle
    app.kubernetes.io/version: 2.1.3
    helm.sh/chart: shuffle-2.1.3
    app.kubernetes.io/component: backend
    io.kompose.service: backend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: shuffle
      app.kubernetes.io/name: shuffle
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: shuffle
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: shuffle
        app.kubernetes.io/version: 2.1.3
        helm.sh/chart: shuffle-2.1.3
        app.kubernetes.io/component: backend
        io.kompose.service: backend
    spec:
      
      serviceAccountName: shuffle-backend
      automountServiceAccountToken: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: shuffle
                    app.kubernetes.io/name: shuffle
                    app.kubernetes.io/component: backend
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: backend
          image: ghcr.io/shuffle/shuffle-backend:2.1.3
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 768Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 512Mi
          ports:
            - name: http
              containerPort: 5001
          volumeMounts:
            - name: shuffle-app-builder
              mountPath: /app/generated
            - name: shuffle-apps
              mountPath: /shuffle-apps
            - name: shuffle-files
              mountPath: /shuffle-files
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: shuffle-app-builder
          persistentVolumeClaim:
            claimName: backend-apps-claim
        - name: shuffle-apps
          persistentVolumeClaim:
            claimName: shuffle-backend-apps
        - name: shuffle-files
          persistentVolumeClaim:
            claimName: shuffle-backend-files
---
# Source: shuffle/templates/frontend/frontend-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shuffle-frontend
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: shuffle
    app.kubernetes.io/version: 2.1.3
    helm.sh/chart: shuffle-2.1.3
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: shuffle
      app.kubernetes.io/name: shuffle
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: shuffle
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: shuffle
        app.kubernetes.io/version: 2.1.3
        helm.sh/chart: shuffle-2.1.3
        app.kubernetes.io/component: frontend
    spec:
      
      serviceAccountName: shuffle-frontend
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: shuffle
                    app.kubernetes.io/name: shuffle
                    app.kubernetes.io/component: frontend
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      containers:
        - name: frontend
          image: ghcr.io/shuffle/shuffle-frontend:2.1.3
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 2Gi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
      volumes:
        - name: empty-dir
          emptyDir: {}
---
# Source: shuffle/templates/orborus/orborus-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shuffle-orborus
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: shuffle
    app.kubernetes.io/version: 2.1.3
    helm.sh/chart: shuffle-2.1.3
    app.kubernetes.io/component: orborus
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: shuffle
      app.kubernetes.io/name: shuffle
      app.kubernetes.io/component: orborus
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: shuffle
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: shuffle
        app.kubernetes.io/version: 2.1.3
        helm.sh/chart: shuffle-2.1.3
        app.kubernetes.io/component: orborus
    spec:
      
      serviceAccountName: shuffle-orborus
      automountServiceAccountToken: true
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: shuffle
                    app.kubernetes.io/name: shuffle
                    app.kubernetes.io/component: orborus
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: orborus
          image: ghcr.io/shuffle/shuffle-orborus:nightly
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 2Gi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          ports:
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
      volumes:
        - name: empty-dir
          emptyDir: {}
---
# Source: shuffle/charts/opensearch/templates/data/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shuffle-opensearch-data
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/version: 3.2.0
    helm.sh/chart: opensearch-2.0.10
    app.kubernetes.io/component: data
    ## Istio Labels: https://istio.io/docs/ops/deployment/requirements/
    app: data
spec:
  replicas: 1
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app.kubernetes.io/instance: shuffle
      app.kubernetes.io/name: opensearch
      app.kubernetes.io/component: data
  serviceName: shuffle-opensearch-data-hl
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: shuffle
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: opensearch
        app.kubernetes.io/version: 3.2.0
        helm.sh/chart: opensearch-2.0.10
        app.kubernetes.io/component: data
        ## Istio Labels: https://istio.io/docs/ops/deployment/requirements/
        app: data
      annotations:
    spec:
      serviceAccountName: default
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: opensearch
          image: docker.io/bitnamilegacy/opensearch:3.2.0
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: rest-api
              containerPort: 9200
            - name: transport
              containerPort: 9300
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 180
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: rest-api
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 90
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /opt/bitnami/scripts/opensearch/healthcheck.sh
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 1536Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 1024Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/opensearch/config
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/opensearch/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/opensearch/logs
              subPath: app-logs-dir
            - name: empty-dir
              mountPath: /opt/bitnami/opensearch/plugins
              subPath: app-plugins-dir
            - name: data
              mountPath: /bitnami/opensearch/data
      volumes:
        - name: empty-dir
          emptyDir: {}
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: "data"
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: shuffle/charts/opensearch/templates/master/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shuffle-opensearch-master
  namespace: "shuffle"
  labels:
    app.kubernetes.io/instance: shuffle
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: opensearch
    app.kubernetes.io/version: 3.2.0
    helm.sh/chart: opensearch-2.0.10
    app.kubernetes.io/component: master
    ## Istio Labels: https://istio.io/docs/ops/deployment/requirements/
    app: master
spec:
  replicas: 1
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app.kubernetes.io/instance: shuffle
      app.kubernetes.io/name: opensearch
      app.kubernetes.io/component: master
  serviceName: shuffle-opensearch-master-hl
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: shuffle
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: opensearch
        app.kubernetes.io/version: 3.2.0
        helm.sh/chart: opensearch-2.0.10
        app.kubernetes.io/component: master
        ## Istio Labels: https://istio.io/docs/ops/deployment/requirements/
        app: master
      annotations:
    spec:
      serviceAccountName: default
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: opensearch
          image: docker.io/bitnamilegacy/opensearch:3.2.0
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: rest-api
              containerPort: 9200
            - name: transport
              containerPort: 9300
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 180
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: rest-api
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 90
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /opt/bitnami/scripts/opensearch/healthcheck.sh
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 1536Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 1024Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/opensearch/config
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/opensearch/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/opensearch/logs
              subPath: app-logs-dir
            - name: empty-dir
              mountPath: /opt/bitnami/opensearch/plugins
              subPath: app-plugins-dir
            - name: data
              mountPath: /bitnami/opensearch/data
      volumes:
        - name: empty-dir
          emptyDir: {}
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: "data"
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
